added api CSRSaccounts calls
